Implementing new structure. Added order making and viewing. Highly beta
